# shin

./: Cargo.toml  README.md
.github/workflows/: ci.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cert_parse.rs  chain_validate.rs  conn_read.rs  extension_parse.rs  handshake_parse.rs  psk_parse.rs  record_parse.rs  ticket_decrypt.rs
src/: aead.rs  alert.rs  asn1.rs  chain.rs  codec.rs  extension.rs  handshake.rs  hash.rs  hostname.rs  kdf.rs  kx.rs  lib.rs  peer.rs  proto.rs  psk.rs  record.rs  schedule.rs  server.rs  sig.rs  spki.rs  ticket.rs  time.rs  uninit.rs
src/cert/: ext.rs  mod.rs
src/client/: config.rs  mod.rs
tests/: aes256_sha384.rs  alert.rs  alpn.rs  asn1.rs  cert_chain.rs  cert_extensions.rs  cert_parse.rs  cert_pss.rs  cert_time.rs  cert_type_negotiation.rs  cert_verify.rs  chain_pathlen.rs  cipher_suite.rs  client_conformance.rs  constant_time.rs  downgrade.rs  early_data.rs  early_data_limit.rs  exporter.rs  finished_integrity.rs  handshake_bounds.rs  handshake_e2e.rs  handshake_ecdsa.rs  handshake_ecdsa_p384.rs  handshake_reassembly.rs  handshake_resumption.rs  handshake_rsa.rs  handshake_wire.rs  handshake_x509.rs  hostname.rs  hrr.rs  interop_rustls.rs  key_schedule.rs  mlkem_kx.rs  mutual_auth.rs  name_constraints.rs  p256_kx.rs  path_building.rs  primitives.rs  psk_ch_offer.rs  (+10 more)
tests/common/: mod.rs
