[package]
name = "shin"
version = "0.3.1"
edition = "2024"
description = "Hand-rolled single-threaded TLS 1.3"
license = "MIT"
repository = "https://github.com/dope-rs/shin"
authors = ["inq <gofiri@gmail.com>"]

[dependencies]
ring = "0.17"
subtle = "2"

[dev-dependencies]
rcgen = "0.14"
rsa = "0.9"
rand = "0.8"
rustls-pki-types = "1"
