[package]
name = "shin"
version = "0.7.0"
edition = "2024"
description = "Hand-rolled single-threaded TLS 1.3"
license = "MIT"
repository = "https://github.com/dope-rs/shin"
authors = ["inq <gofiri@gmail.com>"]

[dependencies]
ring = "0.17"
subtle = "2"
ml-kem = { version = "0.3", default-features = false, features = ["alloc", "zeroize"] }
rand_core = { version = "0.10", default-features = false }

[dev-dependencies]
ring = "0.17"
rcgen = "0.14"
rsa = "0.9"
rand = "0.8"
rustls-pki-types = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
